--- a/server/src/index.html
+++ b/server/src/index.html
@@ -8,6 +8,7 @@
 
 <body>
 	<h2>Monaco Language Client Julia Sample</h2>
+	<!-- Load Monaco Editor -->
 	<div id="container" style="width:800px;height:600px;border:1px solid grey"></div>
 	<script src="main.bundle.js"></script>
 </html>
